# ScalElmbda

./: BUILD  COMMANDS  README.md  WORKSPACE  bootstrap  elm.json  jniconfig  reflectconfig  template.yaml
sam-app/: bootstrap  template.yaml
src/main/elm/: Main.elm
src/main/elm/proto/Snoble/: Scalambda.elm  Scalelmbda.elm
src/main/go/: BUILD  BUILD.bazel  scalambda.go
src/main/java/snoble/scalambda/: BUILD  ScalambdaShim.java
src/main/proto/: BUILD  simple.proto
src/main/scala/: BUILD  Scalambda.scala
src/main/scala/snoble/scalambda/: BUILD  Scalambda.scala  ScalambdaSimple.scala
src/main/scala/snoble/scalelmbda/: BUILD  ScalElmbdaSimple.scala
