load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "go_scalambda",
    srcs = ["scalambda.go"],
    cgo = True,
    copts = [
        "-I/usr/lib/jvm/java-8-openjdk-amd64/include",
        "-I/usr/lib/jvm/java-8-openjdk-amd64/include/linux",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aws_aws_lambda_go//lambda:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
    linkmode = "c-shared"
)

